tests/fail/importNotAtTopLevel.llcl
/*
error: import statements are only allowed at top level
9  |fn main(): Int8 {
10 |    import ""
        ^^^^^^
11 |	return 0;
*/

fn main(): Int8 {
	import ""
	return 0;
}